# google-calendar-api

./: .gitignore  pyproject.toml
src/google_calendar_api/: __init__.py  applications.py
src/google_calendar_api/calendar/: __init__.py  calendar.py
src/google_calendar_api/collection/: __init__.py  collection.py
src/google_calendar_api/config/: base.py  config.py
src/google_calendar_api/credentials/: __init__.py  credentials.py
src/google_calendar_api/log/: __init__.py  log.py
src/google_calendar_api/schema/: calendar.py
src/google_calendar_api/service/calendar/: service.py
src/google_calendar_api/service/credentials/: service.py
src/google_calendar_api/types/: calendar.py
src/google_calendar_api/utils/: _datetime.py
